--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
     "material-icons": "^0.2.3",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.6.3",
+    "react-dnd": "^7.0.2",
+    "react-dnd-html5-backend": "^7.0.2",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
