--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react-dnd": "^7.0.2",
     "react-dnd-html5-backend": "^7.0.2",
     "react-dom": "^16.6.3",
+    "react-materialize": "^2.6.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
   },
