--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "apollo-boost": "^0.1.23",
     "graphql": "^14.0.2",
+    "jquery": "^3.3.1",
     "material-icons": "^0.2.3",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.6.3",
